--- a/examples/index-modal.haml
+++ b/examples/index-modal.haml
@@ -35,8 +35,8 @@
                         %p.moo-text
                             Parrafo explicativo, puede tener varios renglones
                         .moo-buttons
-                            %a.moo-ui-cancel
+                            %a.button.cancel
                                 Cancelar
-                            %a.moo-ui-submit
+                            %a.button.submit
                                 Aceptar
             
