--- a/examples/css/demo/base/components/_buttons.scss
+++ b/examples/css/demo/base/components/_buttons.scss
@@ -34,18 +34,27 @@ $badge-bg-color: $color-tn-tab-red;
 // No styleguide reference
 .button {
     // font-size: 1.4em;
-    font-size: 13px;
+    font-size: 1.5em;
+    line-height: 150%;
     font-weight: 700;
     padding: 7px 20px;
     // padding: .5em 1.5em;
     border: 1px solid $color-border-main;
     background-color: lighten($color-border-main, 50%);
-    @include border-radius(3px);  
+    @include border-radius(5px);
     &.submit {
-        color: $submit-text-color;
-        border-color:$submit-border-color; 
-        background-color: $submit-bg-color;
+        // color: $submit-text-color;
+        // border-color:$submit-border-color; 
+        // background-color: $submit-bg-color;
+        @include background(linear-gradient(top, #ccc, #888));
+        border: 1px solid #a1a1a1;
+        color: #FFF;
     }
+    &.cancel {
+    @include background(linear-gradient(top, #eee, #ccc));
+            border: 1px solid #c1c1c1;
+    }
+    
 }
 
 
