--- a/examples/index-modal.haml
+++ b/examples/index-modal.haml
@@ -26,7 +26,7 @@
             %p parrafo de prueba lorem ipsum dolor sit amet.
             %p parrafo de prueba lorem ipsum dolor sit amet.
             .moo-ui-form
-                .moo-ui-modal-container.moo-show 
+                .moo-ui-modal-container.moo-hidden 
                     %header.moo-ui-modal-header
                         %h1 Modal alert
                     .moo-ui-modal-panel
