--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -1520,27 +1520,12 @@ nav.app .moo-nav.client-accept:before {
 }
 /* line 45, demo/base/components/_buttons.scss */
 .button.submit {
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #cccccc), color-stop(100%, #888888));
-  background: -webkit-linear-gradient(top, #cccccc, #888888);
-  background: -moz-linear-gradient(top, #cccccc, #888888);
-  background: -o-linear-gradient(top, #cccccc, #888888);
-  background: -ms-linear-gradient(top, #cccccc, #888888);
-  background: linear-gradient(top, #cccccc, #888888);
-  border: 1px solid #a1a1a1;
-  color: #FFF;
-}
-/* line 53, demo/base/components/_buttons.scss */
-.button.cancel {
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #eeeeee), color-stop(100%, #cccccc));
-  background: -webkit-linear-gradient(top, #eeeeee, #cccccc);
-  background: -moz-linear-gradient(top, #eeeeee, #cccccc);
-  background: -o-linear-gradient(top, #eeeeee, #cccccc);
-  background: -ms-linear-gradient(top, #eeeeee, #cccccc);
-  background: linear-gradient(top, #eeeeee, #cccccc);
-  border: 1px solid #c1c1c1;
+  color: #dde5f4;
+  border-color: #14233f;
+  background-color: #567ec9;
 }
 
-/* line 61, demo/base/components/_buttons.scss */
+/* line 57, demo/base/components/_buttons.scss */
 .moo-ui-badge {
   background-color: #a6220f;
   color: #f3f3f3;
@@ -1702,25 +1687,25 @@ nav.app .moo-nav.client-accept:before {
   position: absolute;
   top: 20%;
   z-index: 1500;
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-/* line 38, ../../source/css/sass/_mootor.ui.modal.scss */
-.moo-ui-modal-container header {
-  color: #FFF;
-  text-shadow: #aaaaaa 0px 0px 1px;
-}
-/* line 41, ../../source/css/sass/_mootor.ui.modal.scss */
-.moo-ui-modal-container header h1 {
-  margin: 0;
-}
-/* line 45, ../../source/css/sass/_mootor.ui.modal.scss */
-.moo-ui-modal-container.moo-show {
   height: auto;
   opacity: 1;
   left: 12.5%;
   width: 75%;
+}
+/* line 48, ../../source/css/sass/_mootor.ui.modal.scss */
+.moo-ui-modal-container header {
+  color: #FFF;
+  text-shadow: #aaaaaa 0px 0px 1px;
+}
+/* line 51, ../../source/css/sass/_mootor.ui.modal.scss */
+.moo-ui-modal-container header h1 {
+  margin: 0;
+}
+/* line 55, ../../source/css/sass/_mootor.ui.modal.scss */
+.moo-ui-modal-container.moo-hidden {
+  opacity: 0;
+  width: 0;
+  height: 0;
   -webkit-transition: opacity 1s;
   -moz-transition: opacity 1s;
   -ms-transition: opacity 1s;
@@ -1728,7 +1713,7 @@ nav.app .moo-nav.client-accept:before {
   transition: opacity 1s false;
 }
 
-/* line 63, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 62, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
@@ -1742,7 +1727,7 @@ nav.app .moo-nav.client-accept:before {
   margin: 0 auto;
   /* Pasar estos a estilos de botones genericos */
 }
-/* line 70, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 69, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-title {
   color: #000;
   font-size: 2em;
@@ -1750,7 +1735,7 @@ nav.app .moo-nav.client-accept:before {
   white-space: nowrap;
   margin: .8em .5em;
 }
-/* line 77, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 76, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-text {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 1.5em;
@@ -1758,24 +1743,39 @@ nav.app .moo-nav.client-accept:before {
   padding: 0;
   margin: .75em .6em;
 }
-/* line 85, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 84, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-buttons {
   margin: 1.5em 0 0;
   overflow: hidden;
 }
-/* line 87, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 86, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .button {
   width: 49.5%;
 }
-/* line 89, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 88, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .button.submit {
   display: inline;
   float: right;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #cccccc), color-stop(100%, #888888));
+  background: -webkit-linear-gradient(top, #cccccc, #888888);
+  background: -moz-linear-gradient(top, #cccccc, #888888);
+  background: -o-linear-gradient(top, #cccccc, #888888);
+  background: -ms-linear-gradient(top, #cccccc, #888888);
+  background: linear-gradient(top, #cccccc, #888888);
+  border: 1px solid #a1a1a1;
+  color: #FFF;
 }
-/* line 90, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 94, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .button.cancel {
   display: inline;
   float: left;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #eeeeee), color-stop(100%, #cccccc));
+  background: -webkit-linear-gradient(top, #eeeeee, #cccccc);
+  background: -moz-linear-gradient(top, #eeeeee, #cccccc);
+  background: -o-linear-gradient(top, #eeeeee, #cccccc);
+  background: -ms-linear-gradient(top, #eeeeee, #cccccc);
+  background: linear-gradient(top, #eeeeee, #cccccc);
+  border: 1px solid #c1c1c1;
 }
 
 /* line 14, demo/base/components/_comments.scss */
