--- a/examples/css/styles-ios.css
+++ b/examples/css/styles-ios.css
@@ -1684,26 +1684,25 @@ nav.app .moo-nav.client-accept:before {
 
 /* line 35, demo/base/components/_buttons.scss */
 .button {
-  font-size: 1.5em;
-  line-height: 150%;
+  font-size: 13px;
   font-weight: 700;
   padding: 7px 20px;
   border: 1px solid #151618;
   background-color: #8f949d;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  border-radius: 5px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
 }
-/* line 45, demo/base/components/_buttons.scss */
+/* line 44, demo/base/components/_buttons.scss */
 .button.submit {
   color: #dde5f4;
   border-color: #14233f;
   background-color: #567ec9;
 }
 
-/* line 57, demo/base/components/_buttons.scss */
+/* line 56, demo/base/components/_buttons.scss */
 .moo-ui-badge {
   background-color: #a6220f;
   color: #f3f3f3;
@@ -1843,9 +1842,11 @@ nav.app .moo-nav.client-accept:before {
 }
 /* line 86, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .button {
+  font-size: 1.5em;
+  line-height: 150%;
   width: 49.5%;
 }
-/* line 88, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 90, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .button.submit {
   display: inline;
   float: right;
@@ -1858,7 +1859,7 @@ nav.app .moo-nav.client-accept:before {
   border: 1px solid #a1a1a1;
   color: #FFF;
 }
-/* line 94, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 96, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .button.cancel {
   display: inline;
   float: left;
