--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -1701,7 +1701,7 @@ nav.app .moo-nav.client-accept:before {
   margin: 0;
 }
 /* line 55, ../../source/css/sass/_mootor.ui.modal.scss */
-.moo-ui-modal-container.moo-hidden {
+.moo-ui-modal-container.hidden {
   opacity: 0;
   width: 0;
   height: 0;
