--- a/source/css/sass/_mootor.ui.modal.scss
+++ b/source/css/sass/_mootor.ui.modal.scss
@@ -18,7 +18,7 @@
 @mixin mootor-modal (
     $container-class:".moo-ui-modal-container",
     $panel-class: ".moo-ui-modal-panel",
-    $hidden-class: ".moo-hidden",
+    $hidden-class: ".hidden",
     $width: large,
     $buttons: 2) {
     #{$container-class} {
