- Experimental custom CSS

--- a/source/css/sass/_mootor.nav.scss
+++ b/source/css/sass/_mootor.nav.scss
@@ -34,8 +34,7 @@ body, html {
     nav a {
         padding: .5em 1em;
         width: auto;
-        float: left;
-        display: block;
+        display: inline;
         font-size: 1.5em;
     }
 }
