--- a/source/css/sass/_mootor.ui.form.scss
+++ b/source/css/sass/_mootor.ui.form.scss
@@ -26,28 +26,22 @@
 // Standard form
 
 .moo-ui-form {
+    text-align: left;
     width: 90%; // FIXME
     margin: 5em auto;
     background-color: #FFF;
     border: 1px solid #CCC;
     border-radius: 5px;
     @extend .clearfix;
-    .legend {
-        text-align: left;
-    }
     .moo-field {
         display:block;
         @extend .clearfix;
         padding: 1em 2em;
         border-top: 1px solid #CCC;
         &:first-child { border-top: none }
-        label span {
-            text-align: left;
-            display: block;
-        }
         > label, > legend {
             @include float-left;
-            font-size: 1.3em;
+            font-size: 2em;
             font-weight: 700;
             width: 25%;
         }
@@ -69,7 +63,7 @@
     height: 3em;
     // z-index: 300;  BUG WITH MULTIPLE SELECTS
     .moo-ui-select-text {
-        font-size: 1.3em;
+        font-size: 1.5em;
         line-height: 1.5;
         text-overflow: ellipsis;
         white-space: nowrap;
@@ -77,10 +71,9 @@
         @include float-left;
         padding: 0 0.35em;
         width: 90%;
-        text-align: left;
     }
     .moo-ui-select-link {
-        color: #999;
+        color: #000;
         line-height: 2.25em;
         text-align: right;
         text-decoration: none;
@@ -88,9 +81,24 @@
         height: 100%;
         padding: 0 0.5em;
         position:relative;
-        right: 1em;
+        right: 0;
         z-index: 10;
-
+        &:after  {
+            @include background(linear-gradient(top, #FFF, #CCC));
+            border-top: 1px solid #666;
+            border-right: 1px solid #666;
+            border-bottom: 1px solid #666;
+            border-top-right-radius: 5px;
+            border-bottom-right-radius: 5px;
+            content: " "; 
+            display: block;
+            position: absolute;
+            top: -0.35em;
+            right: -0.35em;
+            width: 2.75em;
+            height: 2.8em;
+            z-index: -1;
+        }
     }
     .moo-ui-select-menu {
         background-color: #999;
@@ -259,124 +267,3 @@
         }
     }
 }
-
-// FIXME CHECK
-.fieldset-container {    
-    border-top: none;
-    border-bottom: 1px solid $color-border-forms;
-    padding: 0;
-    @extend .clearfix;
-    width: 100%;
-    text-align: left;
-    &:last-child { border:none;}
-    fieldset {
-        border: 1px solid #ccc;
-        @include border-radius(5px);
-        padding: 0;
-    }
-    .moo-ui-checkbox {
-        float: left;
-        padding: 0 0 0 1.3em;
-        width: 100%; // FIXME this width has issues in android.
-        label {
-            background-color: transparent;
-            font-size: 15px;
-            padding: .75em 3em .75em 2.5em;
-            line-height: 135%;
-            position: relative;
-            width: 100%;
-            @extend .clearfix;
-        }
-    }
-}
-
-// Date
-
-.moo-ui-date-container {
-    @extend .moo-ui-input-container;
-    padding: 0.25em; 
-    height: 3em;
-    .moo-ui-date-text {
-        font-size: 1.3em;
-        line-height: 1.5;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-        @include float-left;
-        padding: 0 0.35em;
-        width: 90%;
-        text-align: left;
-    }
-    .moo-ui-date-link {
-        color: #999;
-        line-height: 2.25em;
-        text-align: right;
-        text-decoration: none;
-        @include float-right;
-        height: 100%;
-        padding: 0 0.5em;
-        position:relative;
-        right: 1em;
-        z-index: 10;
-
-    }
-    .moo-ui-date-menu {
-        background-color: #999;
-        border-radius: 5px;
-        display: none;
-        padding: 1em;
-        position: absolute;
-        width: 99%;
-        z-index: 1000;
-    }
-    .moo-ui-date-wrapper {
-        overflow: hidden;
-        height: 100%;
-    }
-}   
-
-// time
-
-.moo-ui-time-container {
-    @extend .moo-ui-time-container;
-    padding: 0.25em; 
-    height: 3em;
-    .moo-ui-time-text {
-        font-size: 1.3em;
-        line-height: 1.5;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-        @include float-left;
-        padding: 0 0.35em;
-        width: 90%;
-        text-align: left;
-    }
-    .moo-ui-time-link {
-        color: #999;
-        line-height: 2.25em;
-        text-align: right;
-        text-decoration: none;
-        @include float-right;
-        height: 100%;
-        padding: 0 0.5em;
-        position:relative;
-        right: 1em;
-        z-index: 10;
-
-    }
-    .moo-ui-time-menu {
-        background-color: #999;
-        border-radius: 5px;
-        display: none;
-        padding: 1em;
-        position: absolute;
-        width: 99%;
-        z-index: 1000;
-    }
-    .moo-ui-time-wrapper {
-        overflow: hidden;
-        height: 100%;
-    }
-}   
-
